src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/suggestions.component.scss
@import 'src/variables';

:host {
  background-color: #faf9f7;
  position: absolute;
  z-index: 2;
  font-size: 14px;
  border-radius: 2px;
  overflow: hidden;
}

:host(.hidden) {
  visibility: hidden;
}

:host(.flip) {
  transform: translateY(-10px);
}

.loading-indicator {
  display: table;
  padding: 8px 7px 9px 7px;

  span {
    height: 10px;
    width: 10px;
    float: left;
    margin: 0 1px;
    background-color: #9e9ea1;
    display: block;
    border-radius: 50%;
    opacity: 0.4;
    @for $i from 1 through 3 {
      &:nth-of-type(#{$i}) {
        animation: 1s blink infinite ($i * 0.3333s);
      }
    }
  }
}

@keyframes blink {
  50% {
    opacity: 1;
  }
}

mat-selection-list[dense] {
  padding: 0;

  > mat-list-option {
    height: 32px;
  }
}

.mat-list-option ::ng-deep .mat-list-item-content {
  padding: 0 8px !important;
  .mat-list-text {
    padding: 0 !important;
  }
}

.suggestion-confidence {
  font-size: smaller;
  color: $lighterTextColor;
}

.suggestion {
  display: flex;
  column-gap: 5px;
  align-items: baseline;
  justify-content: space-between;
}

